# twitch-stream-notifier

./: .cruft.json  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
src/: __init__.py  __main__.py  config.py  db.py
src/logic/: check_status.py  send_notification.py
